syntax = "proto3";

import "api/user/v1/user.proto";

package letscrum.api.workitem.v1;

option go_package = "github.com/letscrum/letscrum/api/item/v1";

message WorkItem {
  int64 id = 1;
  int64 project_id = 2;
  int64 sprint_id = 3;
  int64 feature_id = 4;
  string title = 5;
  enum WorkItemType {
    WorkItem = 0;
    Backlog = 1;
    Bug = 2;
  }
  WorkItemType type = 6;
  string description = 7;
  enum WorkItemStatus {
    UNKNOWN = 0;
    New = 1;
    Approved = 2;
    Committed = 3;
    Done = 4;
    Removed = 5;
  }
  WorkItemStatus status = 8;
  letscrum.api.user.v1.User assign_to = 9;
  letscrum.api.user.v1.User created_by = 10;
  int64 created_at = 11;
  int64 updated_at = 12;
}

message Task {
  int64 id = 1;
  int64 project_id = 2;
  int64 sprint_id = 3;
  int64 work_item_id = 4;
  string title = 5;
  string description = 6;
  enum TaskStatus {
    UNKNOWN = 0;
    ToDo = 1;
    InProgress = 2;
    Done = 3;
    Removed = 4;
  }
  TaskStatus status = 7;
  letscrum.api.user.v1.User assign_to = 8;
  letscrum.api.user.v1.User created_by = 9;
  int64 created_at = 10;
  int64 updated_at = 11;
}
