syntax = "proto3";

import "api/general/v1/common.proto";
import "api/user/v1/user.proto";

package letscrum.api.item.v1;

option go_package = "github.com/letscrum/letscrum/api/item/v1";

message Task {
  int64 id = 1;
  string project_id = 2;
  string sprint_id = 3;
  int64 work_item_id = 4;
  string title = 5;
  string description = 6;
  enum TaskStatus {
    UNKNOWN = 0;
    ToDo = 1;
    InProgress = 2;
    Done = 3;
    Removed = 4;
  }
  TaskStatus status = 7;
  letscrum.api.user.v1.User assign_user = 8;
  letscrum.api.user.v1.User created_user = 9;
  int64 created_at = 10;
  int64 updated_at = 11;
}

message CreateTaskRequest {
  string project_id = 1;
  string sprint_id = 2;
  int64 work_item_id = 3;
  string title = 4;
}

message CreateTaskResponse {
  bool success = 1;
  Task item = 2;
}

message GetTaskRequest {
  string project_id = 1;
  int64 work_item_id = 2;
  int64 task_id = 3;
}

message GetTaskResponse {
  Task item = 1;
}

message ListTaskRequest {
  string project_id = 1;
  string sprint_id = 2;
  int64 work_item_id = 3;
  int32 page = 4;
  int32 size = 5;
  string keyword = 6;
}

message ListTaskResponse {
  repeated Task items = 1;
  letscrum.api.general.v1.Pagination pagination = 2;
}

message UpdateTaskRequest {
  int64 task_id = 1;
  string project_id = 2;
  int64 work_item_id = 3;
  string title = 4;
  string description = 5;
  Task.TaskStatus status = 6;
  string assign_user_id = 7;
}

message UpdateTaskStatusRequest {
  int64 task_id = 1;
  string project_id = 2;
  int64 work_item_id = 3;
  Task.TaskStatus status = 4;
}

message AssignTaskRequest {
  int64 task_id = 1;
  string project_id = 2;
  int64 work_item_id = 3;
  string assign_user_id = 4;
}

message MoveTaskRequest {
  int64 task_id = 1;
  string project_id = 2;
  int64 work_item_id = 3;
  Task.TaskStatus status = 4;
  int64 to_work_item_id = 5;
}

message UpdateTaskResponse {
  bool success = 1;
  Task item = 2;
}
