syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "apis/general/v1/letscrum.proto";
import "apis/project/v1/project.proto";
import "apis/project/v1/sprint.proto";
import "apis/user/v1/user.proto";

option go_package = "github.com/letscrum/letscrum/apis/letscrum/v1";

service Letscrum {
  rpc GetVersion(google.protobuf.Empty) returns (letscrum.apis.general.v1.GetVersionResponse) {
    option (google.api.http) = {
      get: "/apis/v1/version"
    };
  }

  rpc SignIn(letscrum.apis.user.v1.SignInRequest) returns (letscrum.apis.user.v1.SignInResponse) {
    option (google.api.http) = {
      get: "/apis/v1/signin"
    };
  }
}

service Project {
  rpc CreateProject(letscrum.apis.project.v1.CreateProjectRequest) returns (letscrum.apis.project.v1.CreateProjectResponse) {
    option (google.api.http) = {
      post: "/apis/v1/projects"
    };
  }

  rpc UpdateProject(letscrum.apis.project.v1.UpdateProjectRequest) returns (letscrum.apis.project.v1.UpdateProjectResponse) {
    option (google.api.http) = {
      put: "/apis/v1/projects/{project_id}"
    };
  }

  rpc DeleteProject(letscrum.apis.project.v1.DeleteProjectRequest) returns (letscrum.apis.project.v1.DeleteProjectResponse) {
    option (google.api.http) = {
      delete: "/apis/v1/projects/{project_id}"
    };
  }

  rpc HardDeleteProject(letscrum.apis.project.v1.DeleteProjectRequest) returns (letscrum.apis.project.v1.DeleteProjectResponse) {
    option (google.api.http) = {
      delete: "/apis/v1/projects/{project_id}/delete"
    };
  }

  rpc ListProject(letscrum.apis.project.v1.ListProjectRequest) returns (letscrum.apis.project.v1.ListProjectResponse) {
    option (google.api.http) = {
      get: "/apis/v1/projects"
    };
  }

  rpc GetProject(letscrum.apis.project.v1.GetProjectRequest) returns (letscrum.apis.project.v1.GetProjectResponse) {
    option (google.api.http) = {
      get: "/apis/v1/projects/{project_id}"
    };
  }
}

service ProjectMember {
  rpc CreateProjectMember(letscrum.apis.project.v1.CreateProjectMemberRequest) returns (letscrum.apis.project.v1.CreateProjectMemberResponse) {
    option (google.api.http) = {
      post: "/apis/v1/projects/{project_id}/members"
    };
  }

  rpc UpdateProjectMember(letscrum.apis.project.v1.UpdateProjectMemberRequest) returns (letscrum.apis.project.v1.UpdateProjectMemberResponse) {
    option (google.api.http) = {
      put: "/apis/v1/projects/{project_id}/members/{user_id}"
    };
  }

  rpc DeleteProjectMember(letscrum.apis.project.v1.DeleteProjectMemberRequest) returns (letscrum.apis.project.v1.DeleteProjectMemberResponse) {
    option (google.api.http) = {
      delete: "/apis/v1/projects/{project_id}/members/{user_id}"
    };
  }

  rpc ListProjectMember(letscrum.apis.project.v1.ListProjectMemberRequest) returns (letscrum.apis.project.v1.ListProjectMemberResponse) {
    option (google.api.http) = {
      get: "/apis/v1/projects/{project_id}/members"
    };
  }
}

service Sprint {
  rpc CreateSprint(letscrum.apis.project.v1.CreateSprintRequest) returns (letscrum.apis.project.v1.CreateSprintResponse) {
    option (google.api.http) = {
      post: "/apis/v1/projects/{project_id}/sprints"
    };
  }

  rpc UpdateSprint(letscrum.apis.project.v1.UpdateSprintRequest) returns (letscrum.apis.project.v1.UpdateSprintResponse) {
    option (google.api.http) = {
      put: "/apis/v1/projects/{project_id}/sprints/{sprint_id}"
    };
  }

  rpc DeleteSprint(letscrum.apis.project.v1.DeleteSprintRequest) returns (letscrum.apis.project.v1.DeleteSprintResponse) {
    option (google.api.http) = {
      delete: "/apis/v1/projects/{project_id}/sprints/{sprint_id}"
    };
  }

  rpc HardDeleteSprint(letscrum.apis.project.v1.DeleteSprintRequest) returns (letscrum.apis.project.v1.DeleteSprintResponse) {
    option (google.api.http) = {
      delete: "/apis/v1/projects/{project_id}/sprints/{sprint_id}/delete"
    };
  }

  rpc ListSprint(letscrum.apis.project.v1.ListSprintRequest) returns (letscrum.apis.project.v1.ListSprintResponse) {
    option (google.api.http) = {
      get: "/apis/v1/projects/{project_id}/sprints"
    };
  }

  rpc GetSprint(letscrum.apis.project.v1.GetSprintRequest) returns (letscrum.apis.project.v1.GetSprintResponse) {
    option (google.api.http) = {
      get: "/apis/v1/projects/{project_id}/sprints/{sprint_id}"
    };
  }
}

service User {
  rpc ListUser(letscrum.apis.user.v1.ListUserRequest) returns (letscrum.apis.user.v1.ListUserResponse) {
    option (google.api.http) = {
      get: "/apis/v1/users"
    };
  }

  rpc ListUserProject(letscrum.apis.project.v1.ListUserProjectRequest) returns (letscrum.apis.project.v1.ListUserProjectResponse) {
    option (google.api.http) = {
      get: "/apis/v1/users/{user_id}/projects"
    };
  }
}
